--- a/conf/prometheus.yml
+++ b/conf/prometheus.yml
@@ -25,3 +25,80 @@ scrape_configs:
         target_label: instance
       - target_label: __address__
         replacement: snmp-exporter:9116  # The SNMP exporter's hostname
+
+  - job_name: 'wlc_client-monitoring'
+    # Override the global default and scrape targets from this job every 5 seconds.
+    scrape_interval: 5m
+    static_configs:
+      - targets:
+        - 36.84.100.158
+        - 1.209.75.250
+    metrics_path: /snmp
+    params:
+      module:
+        - wlc_client-monitoring
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: snmp-exporter:9116  # The SNMP exporter's hostname
+
+  - job_name: 'wlc_monitoring-uptime'
+    # Override the global default and scrape targets from this job every 5 seconds.
+    scrape_interval: 5m
+    static_configs:
+      - targets:
+        - 36.84.100.158
+        - 1.209.75.250
+    metrics_path: /snmp
+    params:
+      module:
+        - wlc_monitoring-uptime
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: snmp-exporter:9116  # The SNMP exporter's hostname
+
+  - job_name: 'wlc_ms_ssid'
+    # Override the global default and scrape targets from this job every 5 seconds.
+    scrape_interval: 5m
+    static_configs:
+      - targets:
+        - 36.84.100.158
+        - 1.209.75.250
+    metrics_path: /snmp
+    params:
+      module:
+        - wlc_ms_ssid
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: snmp-exporter:9116  # The SNMP exporter's hostname
+
+  - job_name: 'wlc_ms_stats'
+    # Override the global default and scrape targets from this job every 5 seconds.
+    scrape_interval: 5m
+    static_configs:
+      - targets:
+        - 36.84.100.158
+        - 1.209.75.250
+    metrics_path: /snmp
+    params:
+      module:
+        - wlc_ms_stats
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: snmp-exporter:9116  # The SNMP exporter's hostname
+
